force-app/main/default/objects/RTV_RP_Summary_Budget__c/RTV_RP_Summary_Budget__c.object-meta.xml
<CustomObject>
    <description>Return program&apos;s budget for one wholesale</description>
    <label>RTV RP Summary Budget</label>
    <nameField>
        <displayFormat>RPS-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTV RP Summary Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>