force-app/main/default/objects/RTV_RP_Summary_Budget__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup Account Group</description>
    <label>Account Group</label>
    <referenceTo>RMS_Account_Group__c</referenceTo>
    <relationshipLabel>RTV RP Summary Budgets</relationshipLabel>
    <relationshipName>RTV_RP_Summary_Budgets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>