force-app/main/default/objects/RTV_RP_Summary_Budget__c/fields/Account_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Group_Name__c</fullName>
    <formula>Account_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Group Name</label>
    <type>Text</type>
</CustomField>