force-app/main/default/objects/RTV_RP_Summary_Budget__c/fields/Has_Sku_Budget__c.field-meta.xml
<CustomField>
    <fullName>Has_Sku_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>是否有精确到该AccountGroup以下的商品预算？</inlineHelpText>
    <label>Has Sku Budget</label>
    <type>Checkbox</type>
</CustomField>