force-app/main/default/objects/RTV_RP_Summary_Budget__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <label>Budget MSRP (CNY/incl.VAT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>