force-app/main/default/objects/RTV_RP_Summary_Budget__c/fields/QTY__c.field-meta.xml
<CustomField>
    <fullName>QTY__c</fullName>
    <label>Budget QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>