force-app/main/default/objects/RTV_RP_Summary_Budget__c/fields/Return_Program__c.field-meta.xml
<CustomField>
    <fullName>Return_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Belongs to Return Program</description>
    <label>Return Program</label>
    <referenceTo>RTV_Program__c</referenceTo>
    <relationshipLabel>RTV RP Summary Budgets</relationshipLabel>
    <relationshipName>RTV_RP_Summary_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>