force-app/main/default/objects/RTV_RP_Summary_Budget__c/fields/Tack_Back_Net__c.field-meta.xml
<CustomField>
    <fullName>Tack_Back_Net__c</fullName>
    <label>Budget Amount (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>