force-app/main/default/objects/RTV_RP_Summary_Budget__c/listViews/RMS_Baoshang_Team_RTV_RP_Summary_Budget.listView-meta.xml
<ListView>
    <fullName>RMS_Baoshang_Team_RTV_RP_Summary_Budget</fullName>
    <filterScope>Queue</filterScope>
    <label>RMS Baoshang Team</label>
    <queue>RMS_Baoshang_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>